@@ -14,6 +14,9 @@
    back a 401. The client can then retry with credentials.
    (Jelmer Vernooĳ, #691)
 
+ * Install dulwich script from entry_points, making it slightly easier
+   to use on Windows. (Jelmer Vernooĳ, #540)
+
 0.20.2	2020-06-01
 
  * Brown bag release to fix uploads of Windows wheels.
